[package]
name = "game"
version = "3.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2018"

[dependencies]
generic_result = {path = "../generic_result"}
gl_obj = {path = "../gl_obj"}
gl_safe = {path = "../gl_safe"}
gl_vec = {path = "../gl_vec"}
bincode = "1.3"
flate2 = "1.0"
fnv = "1.0"
gl = "0.14"
glutin = "0.26"
image = "0.23"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"